test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 18 May 2026 17:01:20 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="mGLsLgDEvTT0/c4ey8Z2jQhkV22SSE/e", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}